--- a/FE/src/app/app.component.html
+++ b/FE/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- Loader -->
 <app-loader *ngIf="status"></app-loader>
 <!-- Router Outlet -->
+<app-header></app-header>
 <router-outlet></router-outlet>
