--- a/FE/src/app/routes/auth/auth.component.html
+++ b/FE/src/app/routes/auth/auth.component.html
@@ -35,6 +35,8 @@
                   >Your Email</label
                 >
                 <input
+                  [class.shake]="isErrorLogin"
+                  class="shake"
                   type="text"
                   name="name"
                   formControlName="email"
@@ -46,6 +48,7 @@
                   >Your Password</label
                 >
                 <input
+                  [class.shake]="isErrorLogin"
                   type="password"
                   name="email"
                   formControlName="password"
@@ -56,13 +59,16 @@
                 <button
                   type="submit"
                   class="common-btn shop-details-review-btn"
+                  [class.shake]="isErrorLogin"
                   (click)="onLogin()"
                   [disabled]="loginForm.invalid"
                 >
                   Submit
                 </button>
               </div>
-              <p class="form-message"></p>
+              <p *ngIf="isErrorLogin" class="message error">
+                {{ errorMessage }}
+              </p>
             </div>
           </form>
         </div>
@@ -83,6 +89,7 @@
                   >Your Name</label
                 >
                 <input
+                  [class.shake]="isErrorSignUp"
                   type="text"
                   name="name"
                   required
@@ -92,6 +99,7 @@
               <div class="col-xl-12 col-lg-12 col-sm-12 col-12">
                 <label class="form-check-label">Your Email</label>
                 <input
+                  [class.shake]="isErrorSignUp"
                   type="email"
                   name="email"
                   required
@@ -101,6 +109,7 @@
               <div class="col-xl-12 col-lg-12 col-sm-12 col-12">
                 <label class="form-check-label">Password</label>
                 <input
+                  [class.shake]="isErrorSignUp"
                   type="password"
                   name="phone"
                   required
@@ -110,6 +119,7 @@
               <div class="col-xl-12 col-lg-12 col-sm-12 col-12">
                 <label class="form-check-label">Confirm Password</label>
                 <input
+                  [class.shake]="isErrorSignUp"
                   type="password"
                   name="address"
                   required
@@ -124,6 +134,7 @@
 							</div> -->
               <div class="details-page-reply-btn-wrap">
                 <button
+                  [class.shake]="isErrorSignUp"
                   type="submit"
                   class="common-btn shop-details-review-btn"
                   (click)="onRegister()"
@@ -132,7 +143,12 @@
                   Create an account
                 </button>
               </div>
-              <p class="form-message"></p>
+              <p *ngIf="isErrorSignUp" class="message error">
+                {{ errorMessage }}
+              </p>
+              <p *ngIf="isUserCreated" class="message created">
+                Utente creato con successo
+              </p>
             </div>
           </form>
         </div>
