--- a/FE/backend/src/app/components/products/digital/digital-sub-category/digital-sub-category.component.html
+++ b/FE/backend/src/app/components/products/digital/digital-sub-category/digital-sub-category.component.html
@@ -4,12 +4,12 @@
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
-                    <h5>Digital Sub Category</h5>
+                    <h5>List of Products</h5>
                 </div>
                 <div class="card-body">
                     <div class="btn-popup pull-right">
                         <button type="button" class="btn btn-secondary" data-toggle="modal" data-original-title="test"
-                            data-target="#exampleModal" (click)="open(content)">Add Sub Category</button>
+                            data-target="#exampleModal" (click)="open(content)">Add Product</button>
                         <ng-template #content let-modal>
                             <div class="modal-header">
                                 <h5 class="modal-title f-w-600" id="exampleModalLabel">Add Digital Product</h5>
