--- a/FE/backend/src/app/components/dashboard/dashboard.component.html
+++ b/FE/backend/src/app/components/dashboard/dashboard.component.html
@@ -7,11 +7,11 @@
                     <div class="media static-top-widget row">
                         <div class="icons-widgets col-4">
                             <div class="align-self-center text-center">
-                                <app-feather-icons [icon]="'navigation'" class="font-warning"></app-feather-icons>
+                                <app-feather-icons [icon]="'users'" class="font-warning"></app-feather-icons>
                             </div>
                         </div>
-                        <div class="media-body col-8"><span class="m-0">Earnings</span>
-                            <h3 class="mb-0">$ <span class="counter" [CountTo]="6659" [from]="0"
+                        <div class="media-body col-8"><span class="m-0">Users</span>
+                            <h3 class="mb-0"><span class="counter" [CountTo]="6659" [from]="0"
                                     [duration]="2">6659</span><small> This Month</small></h3>
                         </div>
                     </div>
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                         <div class="media-body col-8"><span class="m-0">Products</span>
-                            <h3 class="mb-0">$ <span class="counter" [CountTo]="9856" [from]="0"
+                            <h3 class="mb-0"><span class="counter" [CountTo]="9856" [from]="0"
                                     [duration]="2">9856</span><small> This Month</small></h3>
                         </div>
                     </div>
@@ -44,8 +44,8 @@
                                 <app-feather-icons [icon]="'message-square'" class="font-primary"></app-feather-icons>
                             </div>
                         </div>
-                        <div class="media-body col-8"><span class="m-0">Messages</span>
-                            <h3 class="mb-0">$ <span class="counter" [CountTo]="893" [from]="0"
+                        <div class="media-body col-8"><span class="m-0">Review</span>
+                            <h3 class="mb-0"><span class="counter" [CountTo]="893" [from]="0"
                                     [duration]="2">893</span><small> This Month</small></h3>
                         </div>
                     </div>
@@ -58,18 +58,18 @@
                     <div class="media static-top-widget row">
                         <div class="icons-widgets col-4">
                             <div class="align-self-center text-center">
-                                <app-feather-icons [icon]="'users'" class="font-danger"></app-feather-icons>
+                                <app-feather-icons [icon]="'navigation'" class="font-danger"></app-feather-icons>
                             </div>
                         </div>
-                        <div class="media-body col-8"><span class="m-0">New Vendors</span>
-                            <h3 class="mb-0">$ <span class="counter" [CountTo]="45631" [from]="0"
-                                    [duration]="2">45631</span><small> This Month</small></h3>
+                        <div class="media-body col-8"><span class="m-0">Orders</span>
+                            <h3 class="mb-0"><span class="counter" [CountTo]="5631" [from]="0"
+                                    [duration]="2">5631</span><small> This Month</small></h3>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-xl-6 xl-100">
+        <!-- <div class="col-xl-6 xl-100">
             <div class="card">
                 <div class="card-header">
                     <h5>Market Value</h5>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="col-xl-6 xl-100">
             <div class="card">
                 <div class="card-header">
@@ -137,7 +137,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card order-graph sales-carousel">
                 <div class="card-header">
                     <h6>Total Sales</h6>
@@ -176,8 +176,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        </div> -->
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card order-graph sales-carousel">
                 <div class="card-header">
                     <h6>Total purchase</h6>
@@ -215,8 +215,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        </div> -->
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card order-graph sales-carousel">
                 <div class="card-header">
                     <h6>Total cash transaction</h6>
@@ -254,8 +254,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        </div> -->
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card order-graph sales-carousel">
                 <div class="card-header">
                     <h6>Daily Deposits</h6>
@@ -293,8 +293,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-12">
+        </div> -->
+        <!-- <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
                     <h5>Buy / Sell</h5>
@@ -306,7 +306,7 @@
                         (chartClick)="chartClicked($event)"></canvas>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="col-xl-6 xl-100">
             <div class="card height-equal">
                 <div class="card-header">
@@ -372,7 +372,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xl-6 xl-100">
+        <!-- <div class="col-xl-6 xl-100">
             <div class="card height-equal">
                 <div class="card-header">
                     <h5>Empolyee Status</h5>
@@ -510,7 +510,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
