--- a/FE/backend/src/app/components/products/digital/digital-category/digital-category.component.html
+++ b/FE/backend/src/app/components/products/digital/digital-category/digital-category.component.html
@@ -1,10 +1,12 @@
 <!-- Container-fluid starts-->
+<!-- TODO: quanti prodotti appartengono alla categoria? 
+ -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
-                    <h5>Digital Products</h5>
+                    <h5>Category</h5>
                 </div>
                 <div class="card-body">
                     <div class="btn-popup pull-right">
