--- a/FE/backend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/FE/backend/src/app/shared/components/sidebar/sidebar.component.html
@@ -11,14 +11,15 @@
 <div class="sidebar custom-scrollbar">
   <div class="sidebar-user text-center">
     <div>
+      <!-- TODO: mettere nell'immagine le iniziali del nome e del cognome -->
       <img
         class="img-60 rounded-circle"
-        src="assets/images/dashboard/man.png"
+        src="assets/images/dashboard/man.png" 
         alt="#"
       />
     </div>
-    <h6 class="mt-3 f-14">JOHN</h6>
-    <p>general manager.</p>
+    <h6 class="mt-3 f-14">{{name}}</h6>
+    <p>admin.</p>
   </div>
   <ul class="sidebar-menu">
     <li
