--- a/FE/backend/src/app/shared/components/header/header.component.html
+++ b/FE/backend/src/app/shared/components/header/header.component.html
@@ -14,12 +14,12 @@
       <div class="media-body text-right switch-sm">
         <label class="switch">
           <a>
-            <app-feather-icons
+            <!-- <app-feather-icons
               id="sidebar-toggle"
               [icon]="'align-left'"
               (click)="collapseSidebar()"
             >
-            </app-feather-icons>
+            </app-feather-icons> -->
           </a>
         </label>
       </div>
