--- a/FE/frontend/multikart-ssr/src/app/shared/components/modal/cart-modal/cart-modal.component.html
+++ b/FE/frontend/multikart-ssr/src/app/shared/components/modal/cart-modal/cart-modal.component.html
@@ -23,7 +23,7 @@
                                 <div class="buttons">
                                     <a [routerLink]="['/shop/cart']" class="view-cart btn btn-solid">Your cart</a>
                                     <a [routerLink]="['/shop/checkout']" class="checkout btn btn-solid">Check out</a>
-                                    <a [routerLink]="['/shop/list']" class="continue btn btn-solid">Continue shopping</a>
+                                    <!-- <a routerLink="/shop/list" class="continue btn btn-solid">Continue shopping</a> -->
                                 </div>
 
                                 <div class="upsell_payment">
