--- a/FE/frontend/multikart-ssr/src/app/shared/components/product/product-box-one/product-box-one.component.html
+++ b/FE/frontend/multikart-ssr/src/app/shared/components/product/product-box-one/product-box-one.component.html
@@ -44,9 +44,8 @@
       <a
         href="javascript:void(0)"
         title="Quick View"
-        (click)="QuickView.openModal()"
       >
-        <i class="ti-search" aria-hidden="true"></i>
+        <!-- <i class="ti-search" aria-hidden="true"></i> -->
       </a>
       <a href="javascript:void(0)"><i aria-hidden="true"></i></a>
     </div>
