--- a/FE/frontend/multikart-ssr/src/app/shop/checkout/checkout.component.html
+++ b/FE/frontend/multikart-ssr/src/app/shop/checkout/checkout.component.html
@@ -168,7 +168,7 @@
                               </tr>
                             </table>
                             <button
-                              *ngIf="!data.value.number"
+                              *ngIf="!data.value.id"
                               (click)="onAddCard()"
                             >
                               Add Card
