--- a/FE/frontend/multikart-ssr/src/app/shop/collection/widgets/grid/grid.component.html
+++ b/FE/frontend/multikart-ssr/src/app/shop/collection/widgets/grid/grid.component.html
@@ -5,7 +5,7 @@
                 <div class="search-count">
                     <h5>Showing Products 1-{{ products.length }} of {{ paginate.totalItems }} Result</h5>
                 </div>
-                <div class="collection-view">
+                <!-- <div class="collection-view">
                     <ul>
                         <li (click)="setLayoutView('grid-view')">
                             <i class="fa fa-th grid-layout-view"></i>
@@ -14,7 +14,7 @@
                             <i class="fa fa-list-ul list-layout-view"></i>
                         </li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="collection-grid-view" *ngIf="layoutView == 'grid-view'">
                     <ul>
                         <li (click)="setGridLayout('col-lg-6')">
