--- a/FE/frontend/multikart-ssr/src/styles.scss
+++ b/FE/frontend/multikart-ssr/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+.blog-detail-page .comment-section li {
+    padding: 0 !important;
+    border: 0 !important;
+}
+
+//TODO:
