--- a/FE/frontend/multikart-ssr/src/app/pages/review/review.component.html
+++ b/FE/frontend/multikart-ssr/src/app/pages/review/review.component.html
@@ -1,28 +1,41 @@
 <app-breadcrumb [title]="'Review'" [breadcrumb]="'Review'"></app-breadcrumb>
 <!-- section start -->
 <section class="section-b-space blog-detail-page review-page">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <ul class="comment-section">
-                    <li  *ngFor="let review of reviews" style="width: 100%;">
-                        <div class="media"><img src="assets/images/review/1.jpg" alt="Generic placeholder image">
-                            <!-- TODO: far vedere le stelle -->
-                            <div class="media-body">
-                                <h6>{{review.user.name}} {{review.title}}<span>( {{review.created_at | date }} )</span></h6>
-                                <p>{{review.text}}</p>
-                                <!-- <ul class="comnt-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <ul class="comment-section">
+          <li *ngFor="let review of reviews" style="width: 100%">
+            <div class="media">
+              <img
+                src="assets/images/review/1.jpg"
+                alt="Generic placeholder image"
+              />
+              <!-- TODO: aggiustare stile -->
+              
+              <div class="media-body">
+                <h6>
+                  {{ review.user.name }} {{ review.title
+                  }}<span>( {{ review.created_at | date }} )</span>
+                  <nz-rate
+                class="ant-rate-text custom"
+                [(ngModel)]="review.star"
+                nzDisabled
+              ></nz-rate>
+                </h6>
+                <p>{{ review.text }}</p>
+                <!-- <ul class="comnt-sec">
                                     <li><a href="#"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i><span>(14)</span></a></li>
                                     <li><a href="#">
                                             <div class="unlike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i>(2)</div>
                                         </a></li>
                                 </ul> -->
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+              </div>
             </div>
-        </div>
+          </li>
+        </ul>
+      </div>
     </div>
+  </div>
 </section>
 <!-- section end -->
