--- a/FE/frontend/multikart-ssr/src/app/shop/wishlist/wishlist.component.html
+++ b/FE/frontend/multikart-ssr/src/app/shop/wishlist/wishlist.component.html
@@ -2,7 +2,7 @@
 <!--section start-->
 <section class="wishlist-section section-b-space">
   <div class="container">
-    <div class="col-md-12 empty-cart-cls text-center" *ngIf='!wishList.length'>
+    <div class="col-md-12 empty-cart-cls text-center" *ngIf='!wishList.length && !loader'>
       <img src="assets/images/empty-wishlist.png" alt="Empty cart" title="Emprt cart">
       <h3 class="mt-4"><b>Wishlist is Empty</b></h3>
       <h4>Explore more shortlist some items.</h4>
@@ -21,16 +21,16 @@
           <tbody *ngFor="let wish of wishList let i = index">
             <tr>
               <td>
-                  <a [routerLink]="['/shop/product/detail']" [queryParams]="{id: wish.product.id}" > 
+                  <a [routerLink]="['/shop/product/detail']" [queryParams]="{id: wish.variation.id_product}" > 
                     <img [src]="wish?.variation?.media[0]?.url">
                   </a>
               </td>
               <td>
-                  <a>{{ wish.product.name | titlecase }}</a>
+                  <a>{{ wish.variation.name | titlecase }}</a>
                   <div class="mobile-cart-content row">
                     <div class="col-xs-3">
                       <h2 class="td-color">
-                          {{ wish.product.price }} €
+                          {{ (wish.variation.price | discount:wish.variation?.discount) | number : '1.2-2'}} €
                       </h2>
                     </div>
                     <div class="col-xs-3">
@@ -47,7 +47,7 @@
               </td>
               <td>
                   <h4>
-                    {{ wish.product.price }} €
+                    {{ (wish.variation.price | discount:wish.variation?.discount) | number : '1.2-2'}} €
                   </h4>
               </td>
               <td>
@@ -66,7 +66,7 @@
     <div class="row wishlist-buttons" *ngIf='wishList.length'>
       <div class="col-12">
         <a [routerLink]="['/shop/list']"  class="btn btn-solid">continue shopping</a>
-        <a [routerLink]="['/shop/checkout']"  class="btn btn-solid">check out</a>
+        <!-- <a [routerLink]="['/shop/checkout']"  class="btn btn-solid">check out</a> -->
       </div>
     </div>
   </div>
@@ -76,3 +76,5 @@
   #cartModal
   [variation]="wishList[0]?.variation"
 ></app-cart-modal>
+
+<app-skeleton-product-box *ngIf="loader"></app-skeleton-product-box>
